--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,26 +1,37 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #0b5a41; 
-    padding: 0.4rem 2rem;
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  .navbar .logo img {
-    width: 120px; 
-    height: auto; 
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
-  }
-  
-  .navbar .logo img:hover {
-    transform: scale(1.1); 
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #0b5a41; 
+  padding: 0.4rem 2rem;
+  color: #fff;
+  font-family: 'Roboto', sans-serif;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: top 0.3s ease-in-out;
+}
+
+.navbar.hidden {
+  top: -100px; 
+}
+
+.navbar.visible {
+  top: 0; 
+}
+
+
+.navbar .logo img {
+  width: 120px; 
+  height: auto; 
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+.navbar .logo img:hover {
+  transform: scale(1.1); 
+}
   
   .navbar .nav-links {
     display: flex;
